--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -32,6 +32,8 @@ link:elasticstack.html[Elastic Stack]
 
 link:git.html[Git]
 
+link:golang.html[Go]
+
 link:gradle.html[Gradle]
 
 link:groovy.html[Groovy]
